// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Button Group component should align to the right 1`] = `
<DocumentFragment>
  <div
    class="buttons is-right"
  >
    <button
      class="button"
      tabindex="0"
    >
      test 0
    </button>
    <button
      class="button"
      tabindex="0"
    >
      test 1
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button component Button Group component should be a default list of buttons 1`] = `
<DocumentFragment>
  <div
    class="buttons"
  >
    <button
      class="button"
      tabindex="0"
    >
      test 0
    </button>
    <button
      class="button"
      tabindex="0"
    >
      test 1
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button component Button Group component should be centered 1`] = `
<DocumentFragment>
  <div
    class="buttons is-centered"
  >
    <button
      class="button"
      tabindex="0"
    >
      test 0
    </button>
    <button
      class="button"
      tabindex="0"
    >
      test 1
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button component Button Group component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <div
    class="buttons super-class-1 dope-class-2"
  >
    <button
      class="button"
      tabindex="0"
    >
      test 0
    </button>
    <button
      class="button"
      tabindex="0"
    >
      test 1
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button component Button Group component should group buttons together 1`] = `
<DocumentFragment>
  <div
    class="buttons has-addons"
  >
    <button
      class="button"
      tabindex="0"
    >
      test 1
    </button>
    <button
      class="button"
      tabindex="0"
    >
      test 2
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button component should be a Large Primary Button 1`] = `
<DocumentFragment>
  <button
    class="is-primary is-large button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component should be a Primary Button 1`] = `
<DocumentFragment>
  <button
    class="is-primary button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component should be a reset form button 1`] = `
<DocumentFragment>
  <button
    class="button"
    tabindex="0"
    type="reset"
  />
</DocumentFragment>
`;

exports[`Button component should be a submit form button 1`] = `
<DocumentFragment>
  <button
    class="button"
    tabindex="0"
    type="submit"
  />
</DocumentFragment>
`;

exports[`Button component should be an anchor button 1`] = `
<DocumentFragment>
  <a
    class="button"
    href="https://github.com/couds/react-bulma-components"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component should render 1`] = `
<DocumentFragment>
  <button
    class="button"
    tabindex="0"
  >
    Content
  </button>
</DocumentFragment>
`;

exports[`Button component should render 2`] = `
<DocumentFragment>
  <div
    class="buttons"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`Button component should render as a React element link with to prop 1`] = `
<DocumentFragment>
  <a
    href="http://google.com"
  >
    TEST
  </a>
</DocumentFragment>
`;

exports[`Button component should render as a html button 1`] = `
<DocumentFragment>
  <button
    class="is-danger button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component should render as a static Button 1`] = `
<DocumentFragment>
  <span
    class="is-primary is-static button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component should render be disabled 1`] = `
<DocumentFragment>
  <button
    class="button"
    disabled=""
    tabindex="-1"
  />
</DocumentFragment>
`;
